# dong-service/docs/swagger.yaml
@@ -48,6 +48,8 @@ definitions:
         type: string
       owner:
         type: string
+      slug:
+        type: string
       status:
         type: integer
       total_amount:
@@ -591,6 +593,84 @@ paths:
           schema:
             $ref: '#/definitions/models.Response'
       summary: Get top contributors for a campaign
+      tags:
+      - campaigns
+  /api/v1/campaigns/slug/{slug}:
+    get:
+      description: Get details of a specific donation campaign by its slug
+      parameters:
+      - description: Campaign slug
+        in: path
+        name: slug
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.DonationCampaignResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Get a donation campaign by slug
+      tags:
+      - campaigns
+  /api/v1/campaigns/slug/{slug}/top-contributors:
+    get:
+      description: Get the top contributors by slug for a specific donation campaign
+      parameters:
+      - description: Campaign Slug
+        in: path
+        name: slug
+        required: true
+        type: string
+      - default: 10
+        description: Number of top contributors to return
+        in: query
+        maximum: 10
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.TopContributorsResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Get top contributors for a campaign by slug
       tags:
       - campaigns
   /api/v1/stats/campaign:
